--- a/README
+++ b/README
@@ -45,7 +45,7 @@ point numbers or unusually-sized integers (4 bit, 24 bits...)
 LICENCING
 _________
 
-This library is released under a GPL3.0 license. Developed by Olivier Gillet (olivier@mutable-instruments.net) for Mutable Instruments.
+This library is released under a GPL3.0 license. Developed by Emilie Gillet (emilie.o.gillet@gmail.com) for Mutable Instruments.
 
 Credits:
 
